[package]
name = "query_interface"
version = "0.3.6"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
description = "Dynamically query a type-erased object for any trait implementation"
repository = "https://github.com/Diggsey/query_interface"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
dynamic = ["lazy_static"]

[dependencies]
lazy_static = { version = "1.0", optional = true }
